Fix bottom slideshow size and alignment

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3287,7 +3287,7 @@ form#user-login, form#user-pass {
     }     
   }
   .pane-card-cycles-card-slideshow,
-  .pane-card-cycles-slideshow-clone, {
+  .pane-card-cycles-card-slideshow-clone, {
     position: relative;
 
     .col-1 {
